tests/algorithms/transpiler/Zig/ciphers/base16.error
exit status 1
/workspace/mochi/tests/algorithms/transpiler/Zig/ciphers/base16.zig:49:23: error: expected 2 argument(s), found 1
/workspace/mochi/tests/algorithms/transpiler/Zig/ciphers/base16.zig:62:1: note: function declared here